--- a/index.html
+++ b/index.html
@@ -2,141 +2,64 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>Smartwatch Market Dashboard</title>
-  <meta name="viewport" content="width=450, user-scalable=no">
+  <title>Dashboard Criptovalute</title>
   <style>
     body {
-      margin: 0;
-      width: 450px;
-      height: 450px;
-      background: black;
-      color: white;
+      background-color: #000;
+      color: #fff;
       font-family: sans-serif;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: flex-start;
-      padding-top: 10px;
-      box-sizing: border-box;
-    }
-    .section {
       text-align: center;
-      margin-bottom: 6px;
+      padding: 20px;
     }
-    .title {
-      font-size: 18px;
-      font-weight: bold;
-      margin-bottom: 2px;
+    .crypto {
+      margin: 10px 0;
     }
-    .value {
+    button {
+      padding: 10px 20px;
       font-size: 16px;
-    }
-    .change {
-      font-size: 12px;
-    }
-    .live { font-size: 10px; color: limegreen; }
-    .delayed { font-size: 10px; color: orange; }
-    .closed { font-size: 10px; color: gray; }
-    .grid {
-      display: grid;
-      grid-template-columns: 1fr 1fr;
-      column-gap: 8px;
-      row-gap: 4px;
-      width: 90%;
-    }
-    .box {
-      border: 1px solid #444;
-      padding: 4px;
-      border-radius: 6px;
     }
   </style>
 </head>
 <body>
-  <div class="section">
-    <div class="title">Bitcoin</div>
-    <div class="value" id="btceur">--</div>
-    <div class="value" id="btcusd">--</div>
-    <div class="live">● LIVE</div>
+  <h1>Prezzi Criptovalute</h1>
+  <div class="crypto">
+    <h2>BTC/USDT</h2>
+    <p id="btc-price">--</p>
   </div>
-
-  <div class="grid">
-    <div class="box"><div class="title">US500</div><div class="value" id="us500">--</div><div class="change" id="us500chg">--</div><div class="delayed" id="us500status">●</div></div>
-    <div class="box"><div class="title">US100</div><div class="value" id="us100">--</div><div class="change" id="us100chg">--</div><div class="delayed" id="us100status">●</div></div>
-    <div class="box"><div class="title">VIX</div><div class="value" id="vix">--</div><div class="change" id="vixchg">--</div><div class="delayed" id="vixstatus">●</div></div>
-    <div class="box"><div class="title">DXY</div><div class="value" id="dxy">--</div><div class="change" id="dxychg">--</div><div class="delayed" id="dxystatus">●</div></div>
-    <div class="box"><div class="title">Nikkei</div><div class="value" id="nikkei">--</div><div class="change" id="nikkeichg">--</div><div class="delayed" id="nikkeistatus">●</div></div>
-    <div class="box"><div class="title">Hang Seng</div><div class="value" id="hangseng">--</div><div class="change" id="hangsengchg">--</div><div class="delayed" id="hangsengstatus">●</div></div>
-    <div class="box"><div class="title">Gold</div><div class="value" id="xau">--</div><div class="change" id="xauchg">--</div><div class="live" id="xaustatus">●</div></div>
-    <div class="box"><div class="title">EUR/USD</div><div class="value" id="eurusd">--</div><div class="change" id="eurusdchg">--</div><div class="live" id="eurusdstatus">●</div></div>
+  <div class="crypto">
+    <h2>ETH/USDT</h2>
+    <p id="eth-price">--</p>
   </div>
+  <button onclick="aggiornaDati()">Aggiorna Dati</button>
 
   <script>
     async function updateBTC() {
       try {
-        const res = await fetch("https://api.coingecko.com/api/v3/simple/price?ids=bitcoin&vs_currencies=eur,usd");
-        const data = await res.json();
-        document.getElementById("btceur").textContent = data.bitcoin.eur.toLocaleString('it-IT', { style: 'currency', currency: 'EUR' });
-        document.getElementById("btcusd").textContent = data.bitcoin.usd.toLocaleString('en-US', { style: 'currency', currency: 'USD' });
-      } catch {
-        document.getElementById("btceur").textContent = "Errore";
-        document.getElementById("btcusd").textContent = "Errore";
+        const response = await fetch('https://api.binance.com/api/v3/ticker/price?symbol=BTCUSDT');
+        const data = await response.json();
+        document.getElementById('btc-price').textContent = parseFloat(data.price).toFixed(2) + ' USDT';
+      } catch (error) {
+        document.getElementById('btc-price').textContent = 'Errore';
       }
     }
 
-    async function updateForex() {
+    async function updateETH() {
       try {
-        const res = await fetch("https://api.exchangerate.host/latest?base=EUR&symbols=USD,XAU");
-        const data = await res.json();
-        const eurusd = data.rates.USD;
-        const xauusd = 1 / data.rates.XAU;
-
-        document.getElementById("eurusd").textContent = eurusd.toFixed(4);
-        document.getElementById("xau").textContent = xauusd.toFixed(2);
-      } catch {
-        document.getElementById("eurusd").textContent = "Errore";
-        document.getElementById("xau").textContent = "Errore";
+        const response = await fetch('https://api.binance.com/api/v3/ticker/price?symbol=ETHUSDT');
+        const data = await response.json();
+        document.getElementById('eth-price').textContent = parseFloat(data.price).toFixed(2) + ' USDT';
+      } catch (error) {
+        document.getElementById('eth-price').textContent = 'Errore';
       }
     }
 
-    async function updateYahoo(symbol, valueId, changeId, statusId) {
-      try {
-        const url = `https://query1.finance.yahoo.com/v8/finance/chart/${symbol}?interval=1d&range=1d`;
-        const res = await fetch(url);
-        const data = await res.json();
-        const result = data.chart.result[0];
-        const meta = result.meta;
-        const price = meta.regularMarketPrice;
-        const change = meta.regularMarketChangePercent;
-        const timestamp = result.timestamp?.[0] || 0;
-        const now = Date.now() / 1000;
-
-        document.getElementById(valueId).textContent = price.toLocaleString('en-US');
-        document.getElementById(changeId).textContent = (change > 0 ? "+" : "") + change.toFixed(2) + "%";
-
-        const status = (now - timestamp > 7200) ? "● CHIUSO" : "● 15m";
-        document.getElementById(statusId).textContent = status;
-        document.getElementById(statusId).className = (status.includes("CHIUSO") ? "closed" : "delayed");
-      } catch {
-        document.getElementById(valueId).textContent = "Errore";
-        document.getElementById(changeId).textContent = "";
-        document.getElementById(statusId).textContent = "● N/D";
-        document.getElementById(statusId).className = "closed";
-      }
-    }
-
-    updateBTC();
-    updateForex();
-    updateYahoo("^GSPC", "us500", "us500chg", "us500status");
-    updateYahoo("^NDX", "us100", "us100chg", "us100status");
-    updateYahoo("^VIX", "vix", "vixchg", "vixstatus");
-    updateYahoo("DX-Y.NYB", "dxy", "dxychg", "dxystatus");
-    updateYahoo("^N225", "nikkei", "nikkeichg", "nikkeistatus");
-    updateYahoo("^HSI", "hangseng", "hangsengchg", "hangsengstatus");
-
-    setInterval(() => {
+    function aggiornaDati() {
       updateBTC();
-      updateForex();
-    }, 60000);
+      updateETH();
+    }
+
+    // Aggiorna i dati all'avvio
+    aggiornaDati();
   </script>
 </body>
 </html>
