--- a/index.html
+++ b/index.html
@@ -2,64 +2,79 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>Dashboard Criptovalute</title>
+  <title>BTC Watch</title>
+  <meta name="viewport" content="width=450, user-scalable=no">
   <style>
     body {
-      background-color: #000;
-      color: #fff;
+      margin: 0;
+      width: 450px;
+      height: 450px;
+      background: black;
+      color: white;
       font-family: sans-serif;
-      text-align: center;
-      padding: 20px;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      box-sizing: border-box;
     }
-    .crypto {
-      margin: 10px 0;
+    .title {
+      font-size: 22px;
+      font-weight: bold;
+      margin-bottom: 8px;
+    }
+    .label {
+      font-size: 16px;
+      margin: 6px 0 2px;
+    }
+    .value {
+      font-size: 20px;
+      font-weight: bold;
     }
     button {
-      padding: 10px 20px;
+      margin-top: 16px;
       font-size: 16px;
+      padding: 6px 16px;
+      border: none;
+      border-radius: 4px;
+      background-color: #222;
+      color: white;
     }
   </style>
 </head>
 <body>
-  <h1>Prezzi Criptovalute</h1>
-  <div class="crypto">
-    <h2>BTC/USDT</h2>
-    <p id="btc-price">--</p>
-  </div>
-  <div class="crypto">
-    <h2>ETH/USDT</h2>
-    <p id="eth-price">--</p>
-  </div>
-  <button onclick="aggiornaDati()">Aggiorna Dati</button>
+  <div class="title">Bitcoin</div>
+
+  <div class="label">BTC/USDT</div>
+  <div class="value" id="btcusdt">--</div>
+
+  <div class="label">BTC/EUR</div>
+  <div class="value" id="btceur">--</div>
+
+  <button onclick="aggiorna()">Aggiorna</button>
 
   <script>
-    async function updateBTC() {
+    async function getPrice(symbol, elementId, currency) {
       try {
-        const response = await fetch('https://api.binance.com/api/v3/ticker/price?symbol=BTCUSDT');
-        const data = await response.json();
-        document.getElementById('btc-price').textContent = parseFloat(data.price).toFixed(2) + ' USDT';
-      } catch (error) {
-        document.getElementById('btc-price').textContent = 'Errore';
+        const res = await fetch(`https://api.binance.com/api/v3/ticker/price?symbol=${symbol}`);
+        const data = await res.json();
+        const price = parseFloat(data.price);
+        document.getElementById(elementId).textContent = price.toLocaleString(currency === 'EUR' ? 'it-IT' : 'en-US', {
+          style: 'currency',
+          currency: currency
+        });
+      } catch {
+        document.getElementById(elementId).textContent = 'Errore';
       }
     }
 
-    async function updateETH() {
-      try {
-        const response = await fetch('https://api.binance.com/api/v3/ticker/price?symbol=ETHUSDT');
-        const data = await response.json();
-        document.getElementById('eth-price').textContent = parseFloat(data.price).toFixed(2) + ' USDT';
-      } catch (error) {
-        document.getElementById('eth-price').textContent = 'Errore';
-      }
+    function aggiorna() {
+      getPrice('BTCUSDT', 'btcusdt', 'USD');
+      getPrice('BTCEUR', 'btceur', 'EUR');
     }
 
-    function aggiornaDati() {
-      updateBTC();
-      updateETH();
-    }
-
-    // Aggiorna i dati all'avvio
-    aggiornaDati();
+    aggiorna();
+    setInterval(aggiorna, 60000);
   </script>
 </body>
 </html>
