--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
       align-items: center;
       justify-content: center;
       box-sizing: border-box;
+      border-width: 1px;
+      border-style: solid;
+      border-color: #222;
+    
     }
     .title {
       font-size: 22px;
@@ -43,7 +47,7 @@
   </style>
 </head>
 <body>
-  <div class="title">Bitcoin</div>
+  <div class="title">Bitcoinz</div>
 
   <div class="label">BTC/USDT</div>
   <div class="value" id="btcusdt">--</div>
